# 2048-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  TODO.md
src/: algorithm.rs  board.rs  display.rs  game.rs  main.rs
