[package]
name = "game-2048"
description = "A cli implementation of the popular 2048 game writen in rust"
homepage = "https://github.com/pierrechevalier83/2048-rs"
keywords=["2048", "cli", "game"]
version = "0.5.1"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
license = "MIT"

[dependencies]
matrix_display = "0.3"
num = "0.1"
rand = "0.3"
termion = "1.2"

clippy = { version = "*", optional = true }

[features]
default = []
